--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,502 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <link rel="icon" href="./images/logo.svg">
+    <title>NAMU</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    >
+    <script
+      type="text/javascript"
+      src="scripts/main.js"
+      defer
+    ></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+
+    <header class="header page__header">
+      <div class="container">
+
+        <div class="header__content">
+          <div class="header__image-container">
+            <a href="#" class="logo header__logo">
+              <img
+                class="logo__image"
+                src="./images/logo.svg"
+                alt="logo"
+                >
+            </a>
+          </div>
+          <a href="#menu" class="header__menu-opener"></a>
+
+          <div class="grid">
+            <h1 class="
+              header__title
+              grid__item
+              grid__item--mobile-1-2
+              grid__item--tablet-1-3
+              grid__item--desktop-1-5
+            ">
+              ХУДОЖНІЙ <br> МУЗЕЙ
+            </h1>
+            <div class="
+              header__tickets-box
+              grid__item
+              grid__item--mobile-1-2
+              grid__item--tablet-1-3
+              grid__item--desktop-3-5
+            ">
+              <div class="header__tickets-text">КВИТКИ</div>
+              <a class="header__button" href="#exhibition-and-events">
+                <img src="./images/header/tickets-button.svg" alt="tickets-button">
+              </a>
+            </div>
+          </div>
+
+          <a class="header__events" href="#exhibition-and-events">
+            ПОДІЇ
+          </a>
+        </div>
+      </div>
+    </header>
+
+    <div id="menu" class="menu page__menu">
+      <div class="container">
+        <div class="menu__content">
+          <nav class="nav menu__nav">
+            <a href="#" class="menu__icon-cross">
+              <img src="./images/cross.svg" alt="cross-icon">
+            </a>
+
+            <ul class="nav__list">
+              <div class="nav__wrapper">
+                <li class="nav__item">
+                  <a href="#gallery" class="nav__link">Галерея</a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="#exhibition-and-events" class="nav__link">Виставки та події</a>
+                </li>
+              </div>
+
+              <div class="nav__wrapper">
+                <li class="nav__item">
+                  <a href="#about-us" class="nav__link">Про Нас</a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="#contacts" class="nav__link">Контакти</a>
+                </li>
+              </div>
+            </ul>
+          </nav>
+
+          <div class="work-schedule menu__work-schedule">
+            <h2 class="work-schedule__title">Графік роботи</h2>
+            <div class="work-schedule__schedule-container">
+              <div class="work-schedule__schedule">
+                12:00 — 20:00 середа
+                <br>
+                12:00 — 20:00 четвер
+                <br>
+                12:00 — 20:00 п’ятниця
+                <br>
+                11:00 — 19:00 субота
+                <br>
+                11:00 — 19:00 неділя
+              </div>
+
+              <div class="work-schedule__day-off">
+                Вихідні: понеділок, вівторок
+                <br>
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="menu-dimmer"></div>
+
+    <main>
+      <section class="
+          current-events
+          page__current-events
+        "
+        id="exhibition-and-events"
+      >
+
+        <div class="container">
+          <h2 class="current-events__title">Актуальні події</h2>
+
+          <div class="
+            exhibit
+            current-events__exhibit
+          ">
+            <div class="grid">
+              <div class="
+              exhibit__image
+              exhibit__image--image-1
+              grid__item
+              grid__item--mobile-1-2
+              grid__item--tablet-1-6
+              grid__item--desktop-1-7
+            "></div>
+
+              <div class="
+                exhibit__info
+                grid__item
+                grid__item--mobile-1-2
+                grid__item--tablet-1-6
+                grid__item--desktop-9-12
+              ">
+                <div class="
+                  exhibit__event-and-date-box
+                ">
+                  <div class="exhibit__event">ВИСТАВКА</div>
+                  <div class="exhibit__date">26.08-29.11.2019</div>
+                </div>
+
+                <h3 class="
+                  exhibit__title
+                ">
+                  Йду і повертаюсь
+                </h3>
+
+                <p class="
+                  exhibit__description
+                ">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське
+                  мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="
+            exhibit
+            current-events__exhibit
+          ">
+            <div class="grid">
+              <div class="
+              exhibit__image
+              exhibit__image--image-2
+              grid__item
+              grid__item--mobile-1-2
+              grid__item--tablet-1-6
+              grid__item--desktop-1-7
+            "></div>
+
+              <div class="
+                exhibit__info
+                grid__item
+                grid__item--mobile-1-2
+                grid__item--tablet-1-6
+                grid__item--desktop-9-12
+              ">
+                <div class="
+                  exhibit__event-and-date-box
+                ">
+                  <div class="exhibit__event">ВИСТАВКА</div>
+                  <div class="exhibit__date">26.08-29.11.2019</div>
+                </div>
+
+                <h3 class="
+                  exhibit__title
+                ">
+                  І спогади і мрії
+                </h3>
+
+                <p class="
+                  exhibit__description
+                ">
+                  Національний художній музей України до 100 річчя від дня народження видатної української художниці
+                  Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="lecture
+            current-events__lecture
+          ">
+            <div class="grid">
+              <div class="
+              lecture__image
+              grid__item
+              grid__item--mobile-1-2
+              grid__item--tablet-1-6
+              grid__item--desktop-1-12
+            "></div>
+
+              <div class="lecture__plate">
+                <div class="lecture__event-and-date-box">
+                  <div class="lecture__event">ЛЕКЦІЯ</div>
+                  <div class="lecture__date">26/08/2019 - 11:00</div>
+                </div>
+
+                <h3 class="lecture__title">
+                  Від класицизму до романтизму
+                </h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="gallery" class="gallery page__gallery">
+        <div class="container">
+          <h2 class="gallery__title">Галерея</h2>
+
+          <div class="slider gallery__slider">
+            <div class="slider__slides-container">
+              <div class="slider__slide slider__slide--1" id="slide1"></div>
+              <div class="slider__slide slider__slide--2" id="slide2"></div>
+              <div class="slider__slide slider__slide--3" id="slide3"></div>
+              <div class="slider__slide slider__slide--4" id="slide4"></div>
+            </div>
+
+            <div class="slider__nav">
+              <a class="slider__nav-item slider__nav-item--active" href="#slide1"></a>
+              <a class="slider__nav-item" href="#slide2"></a>
+              <a class="slider__nav-item" href="#slide3"></a>
+              <a class="slider__nav-item" href="#slide4"></a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="about-us" class="subscription page__subscription">
+        <div class="container grid">
+          <div class="
+            subscription__content
+            grid__item
+            grid__item--mobile-1-2
+            grid__item--tablet-2-5
+            grid__item--desktop-4-9
+          ">
+            <h2 class="subscription__title">Підписка</h2>
+
+            <p class="subscription__description">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+
+            <form
+              class="subscription__form"
+              action="#"
+              method="post"
+            >
+              <input
+                name="email"
+                type="email"
+                placeholder="E-mail"
+                class="subscription__form-field"
+                required
+              >
+
+              <button type="submit" class="subscription__button">
+                <img
+                  class="subscription__button-arrow"
+                  src="./images/subscription/button.svg"
+                  alt="button-arrow"
+                >
+              </button>
+            </form>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer id="contacts" class="footer">
+      <div class="container">
+
+        <div class="grid">
+          <div class="
+            footer__logo-socials-wrapper
+            grid__item
+            grid__item--mobile-1-2
+            grid__item--tablet-1-1
+            grid__item--desktop-1-1
+          ">
+            <a href="#" class="logo footer__logo">
+              <img 
+                class="logo__image logo__image--footer-style"
+                src="./images/logo.svg"
+                alt="logo"
+              >
+            </a>
+
+            <div class="footer__socials">
+              <a 
+                class="footer__facebook"
+                href="https://www.facebook.com/namu.museum/?locale=uk_UA"
+                target="_blank"
+              >
+                <img 
+                  class="footer__facebook-icon"
+                  src="./images/footer/facebook.svg"
+                  alt="facebook"
+                >
+              </a>
+
+              <a 
+                class="footer__instagram"
+                href="https://www.instagram.com/namu.museum/"
+                target="_blank"
+              >
+                <div class="footer__instagram-container">
+                  <img
+                    class="footer__instagram-icon1"
+                    src="./images/footer/instagram-1part.svg"
+                    alt="instagram"
+                  >
+
+                  <img
+                    class="footer__instagram-icon2"
+                    src="./images/footer/instagram-2part.svg"
+                    alt="instagram"
+                  >
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <div class="
+            work-schedule
+            work-schedule--footer-style
+            footer__work-schedule
+            grid__item
+            grid__item--mobile-1-1
+            grid__item--tablet-2-3
+            grid__item--desktop-3-4
+          ">
+            <h2 class="
+              work-schedule__title
+              work-schedule__title--footer-style
+            ">
+              Графік роботи
+            </h2>
+
+            <div class="
+              work-schedule__schedule-container
+              work-schedule__schedule-container--footer-style
+            ">
+              <div class="work-schedule__schedule work-schedule__schedule--footer-style">
+                12:00 — 20:00 середа
+                <br>
+                12:00 — 20:00 четвер
+                <br>
+                12:00 — 20:00 п’ятниця
+                <br>
+                11:00 — 19:00 субота
+                <br>
+                11:00 — 19:00 неділя
+              </div>
+              <div class="work-schedule__day-off work-schedule__day-off--footer-style">
+                Вихідні: понеділок, вівторок
+                <br>
+                Каса припиняє роботу за 1 годину
+                <br>
+                до закриття музею
+              </div>
+            </div>
+          </div>
+
+          <div class="
+            contacts
+            footer__contacts
+            grid__item
+            grid__item--mobile-2-2
+            grid__item--tablet-4-5
+            grid__item--desktop-5-6
+          ">
+            <h2 class="contacts__title">Контакти:</h2>
+
+            <a 
+              class="contacts__address"
+              href="https://goo.gl/maps/R3oD4oUC1Bo84TXF8"
+              target="_blank"
+            >
+              вул. М. Грушевського, 6; Київ, 01001
+            </a>
+
+            <a href="tel:+38 (044) 278-13-57" class="contacts__call">
+              тел. +38 (044) 278-13-57
+            </a>
+
+            <a href="fax:+38 (044) 278-74-54" class="contacts__fax">
+              факс +38 (044) 278-74-54
+            </a>
+
+            <a href="mailto:info@namu.kiev.ua" class="contacts__email">
+              e-mail: info@namu.kiev.ua
+            </a>
+          </div>
+
+          <a
+            class="
+              footer__button
+              grid__item
+              grid__item--mobile-2-2
+            "
+            href="#"
+          >
+            <img
+              class="footer__button-image"
+              src="./images/footer/arrow.svg"
+              alt="arrow"
+            >
+          </a>
+
+          <nav class="
+            nav-footer
+            footer__nav
+            grid__item
+            grid__item--mobile-1-2
+            grid__item--tablet-2-5
+            grid__item--desktop-7-10
+          ">
+            <ul class="
+            nav-footer__list
+          ">
+              <div class="
+                nav-footer__wrapper
+              ">
+                <li class="nav-footer__item">
+                  <a href="#gallery" class="nav-footer__link">Галерея</a>
+                </li>
+                <li class="nav-footer__item">
+                  <a href="#exhibition-and-events" class="nav-footer__link">Виставки та події</a>
+                </li>
+              </div>
+
+              <div class="
+                nav-footer__wrapper
+              ">
+                <li class="nav-footer__item">
+                  <a href="#about-us" class="nav-footer__link">Про Нас</a>
+                </li>
+                <li class="nav-footer__item">
+                  <a href="#contacts" class="nav-footer__link">Контакти</a>
+                </li>
+              </div>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="footer__bottom-block">
+          <div class="footer__designed">Designed by Zhyriada Marina</div>
+          <div class="footer__copyright">Copyright © 2019. All Rights Reserved.</div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
