--- a/src/index.html
+++ b/src/index.html
@@ -15,29 +15,21 @@
   </head>
   <body class="page__body">
 
-    <div class="grid grid--tablet">
-      <div
-        class="
-          grid__item
-          grid__item--tablet-4-6
-          grid__item--desktop-6-12
-        ">
-        <header class="page__header header">
-          <div class="header__bg">
-            <a href="#menu" class="icon icon--menu"></a>
+    <header class="page__header header">
+      <div class="header__bg">
+        <div class="container container--bg">
+          <div class="header__top">
+            <a href="#menu" class="header__icon-menu icon icon--menu"></a>
 
             <a href="#" class="logo header__logo">NA<br>MU</a>
           </div>
-        </header>
+        </div>
       </div>
 
-      <div
-        class="
-          grid__item
-          grid__item--tablet-1-3
-          grid__item--desktop-1-5
-        ">
-        <div class="page__art-museum art-museum">
+      <div class="page__art-museum art-museum">
+        <div class="container container--art-museum">
+          <a href="#menu" class="art-museum__icon-menu icon icon--menu"></a>
+
           <h1 class="art-museum__title">ХУДОЖНІЙ<br>МУЗЕЙ</h1>
 
           <div class="art-museum__tickets">
@@ -52,62 +44,69 @@
           </div>
         </div>
       </div>
-    </div>
+    </header>
 
     <nav class="page__menu menu" id="menu">
-      <div class="container">
-        <div class="menu__content">
-          <div class="menu__top">
-            <a
-              href="#"
-              class="
-                menu__cross
-                icon
-                icon--cross
-              "></a>
+      <div class="menu__wrapper">
+        <div class="container">
+          <div class="menu__content">
+            <div class="menu__top">
+              <a
+                href="#"
+                class="
+                  menu__cross
+                  icon
+                  icon--cross
+                "></a>
 
-            <ul
-              class="
-                menu__list
-                list
-                list--menu
-              ">
-              <li class="list__item">
-                <a href="#gallery" class="list__link">Галерея</a>
-              </li>
+              <ul
+                class="
+                  menu__list
+                  list
+                  list--menu
+                ">
+                <li class="list__item">
+                  <a href="#gallery" class="list__link">Галерея</a>
+                </li>
 
-              <li class="list__item">
-                <a href="#subscription" class="list__link">Про Нас</a>
-              </li>
+                <li class="list__item">
+                  <a href="#subscription" class="list__link">Про Нас</a>
+                </li>
 
-              <li class="list__item">
-                <a href="#current-events" class="list__link">Виставки та<br>події</a>
-              </li>
+                <li class="list__item">
+                  <a href="#current-events" class="list__link">Виставки та<br>події</a>
+                </li>
 
-              <li class="list__item">
-                <a href="#footer" class="list__link">Контакти</a>
-              </li>
-            </ul>
-          </div>
+                <li class="list__item">
+                  <a href="#footer" class="list__link">Контакти</a>
+                </li>
+              </ul>
+            </div>
 
-          <div class="menu__line"></div>
+            <div class="menu__line"></div>
 
-          <div class="menu__schedule schedule">
-            <h4 class="menu__schedule-item schedule__title">Графік роботи</h4>
+            <div class="menu__schedule schedule">
+              <h4
+                class="
+                  menu__schedule-item
+                  schedule__title
+                  schedule__title--menu
+                ">Графік роботи</h4>
 
-            <p class="menu__schedule-item schedule__working">
-              <span class="schedule__bold">12:00 — 20:00</span> середа<br>
-              <span class="schedule__bold">12:00 — 20:00</span> четвер<br>
-              <span class="schedule__bold">12:00 — 20:00</span> п’ятниця<br>
-              <span class="schedule__bold">11:00 — 19:00</span> субота<br>
-              <span class="schedule__bold">11:00 — 19:00</span> неділя
-            </p>
+              <p class="menu__schedule-item schedule__working">
+                <span class="schedule__bold">12:00 — 20:00</span> середа<br>
+                <span class="schedule__bold">12:00 — 20:00</span> четвер<br>
+                <span class="schedule__bold">12:00 — 20:00</span> п’ятниця<br>
+                <span class="schedule__bold">11:00 — 19:00</span> субота<br>
+                <span class="schedule__bold">11:00 — 19:00</span> неділя
+              </p>
 
-            <p class="menu__schedule-item schedule__weekend">
-              <span class="schedule__bold">Вихідні:</span> понеділок, вівторок<br>
-              Каса припиняє роботу за 1 годину до<br>
-              закриття музею
-            </p>
+              <p class="menu__schedule-item schedule__weekend">
+                <span class="schedule__bold">Вихідні:</span> понеділок, вівторок<br>
+                Каса припиняє роботу за 1 годину до<br>
+                закриття музею
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -115,7 +114,7 @@
 
     <main>
       <section class="page__current-events current-events" id="current-events">
-        <div class="container">
+        <div class="container container--current-events">
           <h2 class="current-events__title">Актуальні події</h2>
 
           <div class="current-events__event event">
@@ -193,25 +192,17 @@
               </div>
             </div>
           </div>
+        </div>
 
-          <div class="current-events__lecture lecture">
-            <div class="lecture__photo-container">
-              <img
-                src="./images/photos/lecture.jpg"
-                alt="lecture"
-                class="lecture__photo"
-              >
+        <div class="lecture">
+          <div class="lecture__info">
+            <div class="lecture__top-info">
+              <div class="lecture__type">ЛЕКЦІЯ</div>
+
+              <div class="lecture__date">26/08/2019 - 11:00</div>
             </div>
 
-            <div class="lecture__info">
-              <div class="lecture__top-info">
-                <div class="lecture__type">ЛЕКЦІЯ</div>
-
-                <div class="lecture__date">26/08/2019 - 11:00</div>
-              </div>
-
-              <h3 class="lecture__title">Від класицизму до романтизму</h3>
-            </div>
+            <h3 class="lecture__title">Від класицизму до романтизму</h3>
           </div>
         </div>
       </section>
