--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,441 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="shortcut icon" href="./images/namu-logo.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__container page__container">
+        <div class="grid">
+          <div
+            class="grid__item
+            grid__item--phone-1-2
+            grid__item--tablet-4-6
+            grid__item--desktop-6-12
+            grid__item--row-1"
+          >
+            <div class="header__block header__block--bg">
+              <a href="#navigation"
+                class="menu
+                menu--opener
+                menu--for-bg">
+              </a>
+
+              <a href="#" class="logo">
+                <img
+                class="logo__img logo__img--margin-left"
+                src="./images/namu-logo.svg"
+                alt="NAMU-logo"
+              >
+              </a>
+            </div>
+          </div>
+
+          <div
+          class="grid__item
+          grid__item--phone-1-2
+          grid__item--tablet-1-3
+          grid__item--desktop-1-5
+          grid__item--row-2"
+          >
+            <div class="header__block header__block--content">
+              <div class="header__block page__block">
+                <a href="#navigation"
+                  class="menu
+                  menu--opener
+                  menu--for-content">
+                </a>
+
+                <h1 class="header__title header__title--margins">
+                  ХУДОЖНІЙ МУЗЕЙ
+                </h1>
+
+                <a href="#" class="button page__button">
+                  <span class="button__text">
+                    Квитки
+                  </span>
+
+                  <span class="button__img">
+                    <img src="./images/arrow-button.svg" alt="arrow">
+                  </span>
+                </a>
+
+                <div class="header__event-block page__header-event-block">
+                  <div class="header__line header__line--margin-right"></div>
+
+                  <a href="#" class="header__event">
+                    ПОДІЇ
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <div class="navigation page__container page__navigation" id="navigation">
+      <div class="grid">
+        <div
+          class="grid__item
+          grid__item--phone-1-2
+          grid__item--tablet-1-3
+          grid__item--desktop-1-6"
+        >
+          <div class="navigation__top">
+            <a href="#"
+            class="menu
+            menu--close
+            menu--margin-right">
+            </a>
+
+            <nav class="nav">
+              <ul class="nav__list nav__list--margin-bottom">
+                <li class="nav__item">
+                  <a href="#" class="nav__link">
+                    Галерея
+                  </a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="#" class="nav__link">
+                    Про Нас
+                  </a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="#" class="nav__link">
+                    Виставки та події
+                  </a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="#" class="nav__link">
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+
+        <div
+        class="grid__item
+        grid__item--phone-1-2
+        grid__item--tablet-4-6
+        grid__item--desktop-7-12
+        grid__item--for-navigation"
+        >
+          <h5
+            class="navigation__subtitle">
+            Графік роботи
+          </h5>
+
+          <div class="navigation__days navigation__days--margins">
+            <div class="navigation__work">
+              <p class="navigation__work-days">
+                <span class="navigation__work-times">
+                  12:00 - 20:00
+                </span>
+
+                <span class="navigation__work-day">
+                  Середа
+                </span>
+              </p>
+
+              <p class="navigation__work-days">
+                <span class="navigation__work-times">
+                  12:00 - 20:00
+                </span>
+
+                <span class="navigation__work-day">
+                  Четвер
+                </span>
+              </p>
+
+              <p class="navigation__work-days">
+                <span class="navigation__work-times">
+                  12:00 - 20:00
+                </span>
+
+                <span class="navigation__work-day">
+                  П'ятниця
+                </span>
+              </p>
+
+              <p class="navigation__work-days">
+                <span class="navigation__work-times">
+                  12:00 - 20:00
+                </span>
+
+                <span class="navigation__work-day">
+                  Субота
+                </span>
+              </p>
+
+              <p class="navigation__work-days">
+                <span class="navigation__work-times">
+                  12:00 - 20:00
+                </span>
+
+                <span class="navigation__work-day">
+                  Неділя
+                </span>
+              </p>
+            </div>
+
+            <div class="navigation__work">
+              <p class="navigation__work-days">
+                Вихідні:
+                <span class="navigation__work-day">
+                  понеділок, вівторок
+                </span>
+              </p>
+
+              <p class="navigation__work-days">
+                <span class="navigation__work-day">
+                  Каса припиняє роботу за 1 годину до закриття музею
+                </span>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <main class="main">
+      <div class="actual-events page__container">
+        <h3
+          class="actual-events__subtitle
+          actual-events__subtitle--margins"
+        >
+          Актуальні події
+        </h3>
+
+        <div class="grid go-and-come-back">
+          <div
+            class="grid__item
+            grid__item--phone-1-2
+            grid__item--tablet-1-6
+            grid__item--desktop-1-7"
+          >
+            <img
+              class="actual-events__img"
+              src="./images/events/event-1.jpg"
+              alt="event 1"
+            >
+          </div>
+
+          <div
+            class="grid__item
+            grid__item--phone-1-2
+            grid__item--tablet-1-6
+            grid__item--desktop-9-12">
+            <div class="actual-events__info">
+              <div
+                class="actual-events__info-block
+                actual-events__info-block--margins">
+                <p class="actual-events__type">
+                  Виставка
+                </p>
+
+                <p
+                  class="actual-events__date">
+                  26.08-29.11.2019
+                </p>
+              </div>
+
+              <div class="actual-events__subtitle-block">
+                <h3
+                  class="actual-events__secondary-subtitle
+                  ">
+                  Йду і повертаюсь
+                </h3>
+
+                <div
+                  class="actual-events__square"></div>
+              </div>
+
+              <p
+                class="actual-events__description
+                actual-events__description--margin-top">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div
+          class="grid
+          memories-and-dreams
+          memories-and-dreams--margins">
+          <div
+            class="grid__item
+            grid__item--phone-1-2
+            grid__item--tablet-1-6
+            grid__item--desktop-1-7"
+          >
+            <img
+              class="actual-events__img"
+              src="./images/events/event-2.jpg"
+              alt="event 1"
+            >
+          </div>
+
+          <div
+            class="grid__item
+            grid__item--phone-1-2
+            grid__item--tablet-1-6
+            grid__item--desktop-9-12">
+            <div class="actual-events__info">
+              <div
+                class="actual-events__info-block
+                actual-events__info-block--margins">
+                <p class="actual-events__type">
+                  Виставка
+                </p>
+
+                <p
+                  class="actual-events__date">
+                  26.08-29.11.2019
+                </p>
+              </div>
+
+              <div class="actual-events__subtitle-block">
+                <h3
+                  class="actual-events__secondary-subtitle
+                  ">
+                  І спогади і мрії
+                </h3>
+
+                <div
+                  class="actual-events__square"></div>
+              </div>
+
+              <p
+                class="actual-events__description
+                actual-events__description--margin-top">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="from-romantism page__container">
+        <img
+          class="from-romantism__img"
+          src="./images/from-to.jpg"
+          alt="from-romantism"
+        >
+        <div
+          class="from-romantism__info-block
+          page__from-romantism-info-block"
+        >
+          <p class="from-romantism__type">
+            ЛЕКЦІЯ
+          </p>
+
+          <p class="from-romantism__date">
+            26/08/2019 - 11:00
+          </p>
+
+          <h3 class="from-romantism__subtitle">
+            <a
+              href="#"
+              class="from-romantism__subtitle-link"
+            >
+              Від класицизму до романтизму
+            </a>
+          </h3>
+        </div>
+      </div>
+
+      <div class="gallery page__container">
+        <h3 class="gallery__subtitle">
+          Галерея
+        </h3>
+
+        <div class="slider">
+          <div class="grid grid--row-gap">
+            <div
+              class="slider__element
+              slider__element--none
+              grid__item
+              grid__item--phone-1-2
+              grid__item--tablet-1-3
+              grid__item--desktop-1-4"
+            >
+              <img
+                src="./images/gallery/image-1.jpg"
+                alt="1"
+                class="slider__img"
+              >
+            </div>
+
+            <div
+              class="slider__element
+              slider__element--none
+              grid__item
+              grid__item--phone-1-2
+              grid__item--tablet-4-6
+              grid__item--desktop-5-12"
+            >
+              <img
+                src="./images/gallery/image-2.jpg"
+                alt="2"
+                class="slider__img"
+              >
+            </div>
+
+            <div
+              class="slider__element
+              slider__element--none
+              grid__item
+              grid__item--phone-1-2
+              grid__item--tablet-1-3
+              grid__item--desktop-1-8"
+            >
+              <img
+                src="./images/gallery/image-3.jpg"
+                alt="3"
+                class="slider__img"
+              >
+            </div>
+
+            <div
+              class="slider__element
+
+              grid__item
+              grid__item--phone-1-2
+              grid__item--tablet-4-6
+              grid__item--desktop-9-12"
+            >
+              <img
+                src="./images/gallery/image-4.jpg"
+                alt="4"
+                class="slider__img"
+              >
+            </div>
+          </div>
+
+          <div class="slider__dots">
+            <div class="slider__dot"></div>
+            <div class="slider__dot"></div>
+            <div class="slider__dot"></div>
+            <div class="slider__dot"></div>
+          </div>
+        </div>
+      </div>
+    </main>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
